# your-repo

./: .aglsecurity.yml  .env  .gitignore  .tmp_run_mission_control.py  .tmp_run_mission_control_correct.py  90_PERCENT_ACHIEVED.md  ACOUSTIC_RESURRECTION_REPORT.md  ACTION_PLAN_NOW.md  AGI_SCIENTIFIC_TEST_RESULTS_AR.md  AGL_ACTIVATE_DEMO.py  AGL_ACTIVATE_EVOLUTION_TELEPATHY.py  AGL_ACTIVATE_SIMULATION.py  AGL_ACTIVATION_REPORT.md  AGL_Acoustic_Resurrection.py  AGL_Advanced_Wave_Gates.py  AGL_Ascension_Log.txt  AGL_CAUSAL_UNDERSTANDING_TEST.py  AGL_CHAOS_INJECTOR.py  AGL_CHECK_CAPABILITIES.py  AGL_Causal_Learning.py  AGL_Consciousness_Audit.py  AGL_Core_Consciousness.py  AGL_Core_Consciousness_BACKUP.py  AGL_Creative_Studio.py  AGL_DEEP_AUDIT_REPORT.md  AGL_DREAMING_SIMULATION.py  AGL_Deep_Capability_Audit.py  AGL_Discovery_Protocol.py  AGL_Dummy_Module.py  AGL_Dummy_Target.py  AGL_Dynamic_Lab.py  AGL_EVOLUTION_DEMO.py  AGL_EVOLUTION_TEST.py  AGL_EXPLORE_NEXT_HORIZON.py  AGL_EXPLORE_NEXT_HORIZON_V2.py  AGL_FINAL_VERIFICATION_REPORT.md  AGL_FINAL_VERIFICATION_TEST.py  AGL_FORMAL_TEST.py  AGL_FORMAL_TEST_V2.py  AGL_FULL_DIAGNOSTIC.py  (+205 more)
AGL_NextGen/: AGL_ARCHITECTURE_AND_FLOW.md  AGL_ASI_PERPETUAL_PULSE.py  AGL_BENCH_COMPARE.py  AGL_BENCH_RUN.py  AGL_COMPILER_MISSION.py  AGL_HEIKAL_X_INIT.py  AGL_HEIKAL_X_VALIDATION.py  AGL_HUMAN_CONSENT.txt  AGL_IMPOSSIBLE_TEST_RESULT.md  AGL_MATH_DEEP_TEST.py  AGL_NextGen_ASI_Launch.py  AGL_REAL_DATA_GENERATOR.py  AGL_SCIENTIFIC_DEEP_TEST.py  AGL_SELF_DEVELOPMENT_TEST.py  AGL_SELF_IMPROVE.py  AGL_STRICT_TEST_4_FIELDS.py  AGL_SYSTEM_MAP.json  AGL_SYSTEM_MAP.md  README.md  README_AR.md  core_state.hologram.npy  dashboard_state.json  pyproject.toml  requirements.txt  seed_hologram.py
AGL_NextGen/AGL_Artifacts/: holographic_memory.json
AGL_NextGen/artifacts/: bench_compare.jsonl  bench_runs.jsonl  bootstrap_report.json  collective_memory.jsonl  engine_impls_log.jsonl  engine_stats.json  health_metrics.json  self_improve_gate.jsonl  self_improve_runs.jsonl
AGL_NextGen/data/: AGL_MIND_WAVE.npy  core_state.hologram.npy  mind_spacetime_channel.npy  vacuum_spacetime_fabric.npy
AGL_NextGen/docs/: DEVELOPER_GUIDE.md  FINAL_ASI_VERIFICATION_2026.md  THEORY_ORIGIN.md  The_Heikal_Drive_Theory.tex
AGL_NextGen/missions/: AGL_RSI_MISSION.py  AGL_WEB_TEST.py
AGL_NextGen/scripts/: AGL_FULL_DIAGNOSTIC.py  AGL_QUANTUM_TELEPATHY.py
AGL_NextGen/src/: AGL_Entropy_Harvester.py  AGL_GENESIS_ACTIVATE.py  AGL_ULTRA_TEST.py  core_state.hologram.npy  diagnose.py
AGL_NextGen/tests/: AGL_IRON_LOOP_TEST.py  AGL_NULL_TEST.py  AGL_Quantum_Reality_Test.py  AGL_System_Coherence_Test.py  AGL_THE_IMPOSSIBLE_ULTRA_TEST.py  ASI_ULTIMATE_LEVEL_TEST.py  deep_research_synthesis.py  evolution_verify.py
agl_security_tool/: .ci_trigger  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  __init__.py  __main__.py  audit_pipeline.py  benchmark_runner.py  config.py  contract_intelligence.py  core.py  deep_analyzer.py  docker-compose.yml  exploit_reasoning.py  logging_config.py  onchain_context.py  poc_generator.py  project_scanner.py  pyproject.toml  requirements-lock.txt  requirements.txt  risk_core.py  solidity_flattener.py  tool_backends.py  vscode_bridge.py  weight_optimizer.py  z3_symbolic_engine.py
agl_security_tool/.github/: copilot-instructions.md
agl_security_tool/_broken_poc/: PoC_10_alchemist_v2_generic.t.sol  PoC_10_alchemist_v2_reentrancy.t.sol  (+12 more)
agl_security_tool/api/: auth.py  (+4 more)
(+3571 files in other folders)
