[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agl-super-intelligence"
version = "2.0.0"
description = "AGL: Advanced General Intelligence Framework"
authors = [{name = "Hossam Heikal"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "requests",
    "torch",
    "scipy"
]

[project.scripts]
agl-run = "agl.core.master_controller:main"
