[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agl-super-intelligence"
version = "2.1.0"
description = "AGL: Portable & Vectorized General Intelligence Framework"
authors = [{name = "Hossam Heikal"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "requests",
    "torch",
    "scipy",
    "colorama",
    "aiohttp",
    "pydantic",
    "matplotlib",
    "networkx",
    "fastapi",
    "uvicorn",
    "sympy",
    "wikipedia-api"
]

[project.scripts]
agl-run = "agl.core.master_controller:main"
