[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agl-system"
version = "0.2.0"
description = "AGL — Advanced General Learner (DKN + Orchestrator)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "pytest>=7",
  "typing_extensions>=4",
  "matplotlib>=3.7",
]

[tool.setuptools]
# Use package discovery to avoid listing directories that aren't Python packages.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["AGL*", "Core_Engines*", "Integration_Layer*"]
